# kuriboh

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
.claude/: settings.json
.claude/agents/: appraiser.md  crypto-reviewer.md  dep-checker.md  reviewer.md  scout.md  unsafe-auditor.md
.github/workflows/: ci.yml
docker-sandbox-template/: Dockerfile
docs/plans/: 2026-03-05-deterministic-scheduler-design.md  2026-03-05-deterministic-scheduler-plan.md
src/: cli.rs  diff.rs  events.rs  main.rs  prompts.rs  report.rs  runner.rs  sandbox.rs  scanner.rs  state.rs
src/agents/: mod.rs  templates.rs
src/tui/: mod.rs  state.rs
src/tui/widgets/: activity_log.rs  file_tree.rs  mod.rs  phase_bar.rs  progress.rs  report.rs
