[package]
name = "kuriboh"
version = "0.1.0"
edition = "2021"
description = "A Claude Code harness for automated security reviews of Rust codebases"

[[bin]]
name = "kuriboh"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
# Async runtime (subprocess management)
tokio = { version = "1", features = ["full"] }
# Error handling
anyhow = "1"
# Serialization (report output, config)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.26.0"
