[package]
name = "kuriboh"
version = "0.1.0"
edition = "2021"
description = "A Claude Code harness for automated security reviews of Rust codebases"
license = "MIT"

[[bin]]
name = "kuriboh"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
# Async runtime (subprocess management)
tokio = { version = "1", features = ["full"] }
# Error handling
anyhow = "1"
# Serialization (report output, config)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.26.0"
rand = { version = "0.9", features = ["small_rng"] }
toml = "0.8"
rayon = "1"
# TUI
ratatui = "0.29"
crossterm = "0.28"

[lints.clippy]
# Enable pedantic lints for stricter code quality
# Priority -1 so individual lint settings override
pedantic = { level = "warn", priority = -1 }

# Pedantic overrides - these are too noisy or don't fit this codebase
missing_errors_doc = "allow"        # Requires extensive documentation work
missing_panics_doc = "allow"        # Requires extensive documentation work
must_use_candidate = "allow"        # Very noisy, too subjective
doc_markdown = "allow"              # Backticks in docs - low value for effort
similar_names = "allow"             # Often false positives
too_many_lines = "allow"            # Subjective function length
module_name_repetitions = "allow"   # FooModule::foo patterns are common and fine
struct_excessive_bools = "allow"    # Sometimes structs legitimately need multiple bools
fn_params_excessive_bools = "allow" # Sometimes functions legitimately need multiple bools
items_after_statements = "allow"    # Style preference, not harmful
uninlined_format_args = "allow"     # format!("{}", x) vs format!("{x}") is minor
return_self_not_must_use = "allow"  # Builder pattern returns

# Cast lints - many false positives in contexts where values are known to be in range
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
# Note: cast_lossless is NOT allowed - prefer From::from() for clarity

# Default::default() vs TypeName::default() is a style preference
default_trait_access = "allow"
# Sometimes separate match arms are clearer even if bodies are identical
match_same_arms = "allow"
# Some async functions don't await but are async for API consistency or future use
unused_async = "allow"
# let_else is newer syntax, current style is fine
manual_let_else = "allow"
# Used underscore bindings are sometimes intentional for documentation
used_underscore_binding = "allow"
# &Option<T> vs Option<&T> - sometimes &Option is intentional
ref_option_ref = "allow"
ref_option = "allow"
# HashMap<K,V> in public APIs doesn't need hasher generalization
implicit_hasher = "allow"
# Appending format! to String - push_str with format is equivalent
format_push_string = "allow"
# Case-sensitive extension comparison is often intentional
case_sensitive_file_extension_comparisons = "allow"
# Unnecessary wrapping in Result - sometimes for API consistency
unnecessary_wraps = "allow"
# Passing by value when not consumed - often cleaner API design
needless_pass_by_value = "allow"
# Small Copy types by reference - often for API consistency
trivially_copy_pass_by_ref = "allow"
# Underscore-prefixed bindings - used for documentation or future use
no_effect_underscore_binding = "allow"
# Closure vs method reference - closure syntax is clearer: .map(|s| s.to_string())
redundant_closure_for_method_calls = "allow"

# Panic safety - deny any operations that could panic
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# Note: indexing_slicing lint is too strict and flags many safe uses
# Instead, we rely on careful code review and bounds checking

# Prohibit all allow attributes - no exceptions
allow_attributes = "deny"

# Allow large error types - error types need rich context for good UX
result_large_err = "allow"

# No debug macros in production code
dbg_macro = "deny"
# No incomplete code markers
todo = "deny"
unimplemented = "deny"
# Use tracing instead of println/eprintln in library code
# CLI crates override this via #![allow(...)] in lib.rs/main.rs
print_stdout = "deny"
print_stderr = "deny"

# Project-specific exceptions
significant_drop_tightening = "allow"  # False positives for simple mutex patterns
large_futures = "allow"                # Bot message handlers are inherently large
enum_variant_names = "allow"           # ProgressEvent::Tool* naming is intentional
